# milgapo

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  log_conf.yaml  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: porter_app_milgapo-backend_2919.yml
.husky/: pre-commit
app/: actions.ts  globals.css  layout.tsx  main.py  page.tsx
app/(auth)/: layout.tsx
app/(dashboard)/: layout.tsx
app/(root)/: layout.tsx  page.tsx
app/api/: __init__.py
app/core/: logger.py  settings.py
app/dashboard/: page.tsx
app/db/: database.py
app/login/: page.tsx
app/models/: scholarships.py
app/otp-verification/: page.tsx
app/schemas/: common.py  scholarships.py
app/services/: scholarships.py
components/: env-var-warning.tsx  form-message.tsx  header-auth.tsx  providers.tsx  submit-button.tsx
components/auth/: auth-button.tsx  auth-form-layout.tsx  auth-layout.tsx  auth-provider.tsx  credential-fields.tsx  login-form-skeleton.tsx  login-form.tsx  otp-form-skeleton.tsx  otp-form.tsx  otp-input.tsx  otp-verification-form.tsx  social-login-buttons.tsx  submit-button.tsx  terms-footer.tsx
components/dashboard/: dashboard-footer.tsx  mobile-sidebar.tsx  page-title.tsx  sidebar-content.tsx  sidebar-navigation.tsx  user-avatar-upload.tsx
components/layout/: footer.tsx  logo.tsx  (+5 more)
config/: auth.ts  common.ts  language.ts  phone-input-texts.ts  site.ts
context/: user-context.tsx
supabase/: config.toml
types/: user.ts
utils/: utils.ts
(+53 files in other folders)
